<resources>
    <string name="app_name">CalorieMeter</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="Email_hint">Email</string>
    <string name="pwd_hint">Password</string>
    <string name="login_text">Sign In</string>
    <string name="messagebody">"Eat a healthy diet \n       Live a healthy life \n              Easily monitor your Calorie intake!"</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="firstnameHint">First name </string>
    <string name="lastnameHint">Last name </string>
    <string name="SignUpButton">Sign up</string>
    <string name="cancelButton">Cancel</string>
    <string name="LOGGEDIN">loggedin</string>
    <string name="loggedin_email">loggedin_email</string>
    <string name="LOGIN_PREFS">edu.uw.tacoma.bnz8.caloriemeter.prefs</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Profile Settings</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="facebook_app_id">1642543012708368</string>
</resources>
